// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SerialConsoleActions with custom texts 1`] = `
<div
  className="console-actions-pf"
>
  <button
    className="btn btn-default console-actions-buttons-pf"
    id="idPrefix-disconnect"
    onClick={[MockFunction]}
  >
    My Disconnect Text
  </button>
  <button
    className="btn btn-default console-actions-buttons-pf"
    id="idPrefix-reconnect"
    onClick={[MockFunction]}
  >
    My Reconnect Text
  </button>
</div>
`;

exports[`Render SerialConsoleActions with the Disconnect button enabled 1`] = `
<div
  className="console-actions-pf"
>
  <button
    className="btn btn-default console-actions-buttons-pf"
    id="idPrefix-disconnect"
    onClick={[MockFunction]}
  >
    Disconnect
  </button>
  <button
    className="btn btn-default console-actions-buttons-pf"
    id="idPrefix-reconnect"
    onClick={[MockFunction]}
  >
    Reconnect
  </button>
</div>
`;

exports[`placeholder render test 1`] = `
<div
  className="console-actions-pf"
>
  <button
    className="btn btn-default console-actions-buttons-pf disabled"
    id="serial-console-actions-disconnect"
    onClick={[Function]}
  >
    Disconnect
  </button>
  <button
    className="btn btn-default console-actions-buttons-pf"
    id="serial-console-actions-reconnect"
    onClick={[Function]}
  >
    Reconnect
  </button>
</div>
`;
